--- a/index.html
+++ b/index.html
@@ -36,11 +36,11 @@
     </nav>
 
     <div class="mob-nav bg-gray-900 hidden flex-col items-center w-full h-64 md:hidden">
-        <a href="/" class="p-2 px-36 my-1 text-white rounded-[8px] hover:bg-gray-800">Home</a>
-        <a href="/about" class="p-2 px-36 my-1 text-white rounded-[8px] hover:bg-gray-800">About</a>
-        <a href="/contact" class="p-2 px-36 my-1 text-white rounded-[8px] hover:bg-gray-800">Contact</a>
-        <a href="/articles" class="p-2 px-36 my-1 text-white rounded-[8px] hover:bg-gray-800 ">Articles</a>
-        <a href="/projects" class="p-2 px-36 my-1 text-white rounded-[8px] hover:bg-gray-800 ">Projects</a>
+        <a href="#index-section" class="p-2 px-36 my-1 text-white rounded-[8px] hover:bg-gray-800">Home</a>
+        <a href="#about-section" class="p-2 px-36 my-1 text-white rounded-[8px] hover:bg-gray-800">About</a>
+        <a href="#article-section" class="p-2 px-36 my-1 text-white rounded-[8px] hover:bg-gray-800">Articles</a>
+        <a href="#projects-section" class="p-2 px-36 my-1 text-white rounded-[8px] hover:bg-gray-800 ">Projects</a>
+        <a href="#contact-section" class="p-2 px-36 my-1 text-white rounded-[8px] hover:bg-gray-800 ">Contact</a>
       </div>
 
 	
@@ -253,7 +253,7 @@
 <div id="projects-section" class="project-card">
   <p style="font-family: Poppins-Bold" class='text-4xl font-extrabold py-5 text-center md:text-start'>Projects</p>
       <div style="box-shadow:0 5px 30px 0 rgba(0,0,0,.05);" class='flex flex-col md:flex-row gap-4 md:gap-x-8 bg-gray-900 p-5 mb-4 rounded-lg'>
-          <img class="post-img-url rounded-lg object-cover" width='350px' height='180px' src="https://cdn.jsdelivr.net/gh/hostmind/host/static/password-generator.png" alt="image">
+          <img class="post-img-url rounded-lg object-cover fill" width='350px' height='180px' src="brainybits.png" alt="image">
           <div>
             <p style="font-family: Poppins-Bold" class="font-bold text-xl text-transparent bg-clip-text bg-gradient-to-r from-cyan-200 via-blue-300 to-blue-600">Brainy Bits AI<p>
             <p class='text-justify my-3'> An AI application to monitor classroom activities, capturing students’ head poses, emotions, and eye movements, generating report on the attentiveness.</p>
@@ -274,14 +274,15 @@
           </div>
       </div>
       <div style="box-shadow:0 5px 30px 0 rgba(0,0,0,.05);" class='flex flex-col md:flex-row gap-4 md:gap-x-8 bg-gray-900 p-5 mb-4 rounded-lg'>
-          <img class="post-img-url rounded-lg object-cover" width='350px' height='180px' src="https://cdn.jsdelivr.net/gh/hostmind/host/static/web-blog-ui.png" alt="image">
+          <img class="post-img-url rounded-lg object-cover cover" width='350px' height='160px' src="rcube.png" alt="image">
           <div>
             <p style="font-family: Poppins-Bold" class="font-bold text-xl text-transparent bg-clip-text bg-gradient-to-r from-cyan-200 via-blue-300 to-blue-600">RCube Green Ecom</p>
-            <p class='text-justify my-3'>Web Blog UI is a user interface design project that utilizes HTML, CSS and JavaScript to create a visually appealing and functional blog website. The project was created with an emphasis on user-centered design principles, ensuring easy navigation and visually pleasing design.</p>
+            <p class='text-justify my-3'>This project is developed using Django, a high-level Python web framework. The primary aim is to create a platform that helps consumers make eco-friendly choices by providing access to green products and sustainability education using blogs that is related to the green technology.</p>
             <ul class='mb-3'>
-              <li>&#9989; Modern UI Blog Design</li>
-              <li>&#9989; Dark/Light/System Mode Switcher</li>
-              <li>&#9989; Responsive Design</li>
+              <li>&#9989; Leveraged django for the web framework.</li>
+              <li>&#9989; HTML, CSS, JavaScript for the UI</li>
+              <li>&#9989; Google Sign in API integration</li>
+			  <li>&#9989; Responsive Design</li>
             </ul>
             <span class='text-lg font-bold'>Technologies used</span><br>
             <div class='flex space-x-2 my-3'>
@@ -296,14 +297,14 @@
           </div>
       </div>
       <div style="box-shadow:0 5px 30px 0 rgba(0,0,0,.05);" class='flex flex-col md:flex-row gap-4 md:gap-x-8 bg-gray-900 p-5 mb-4 rounded-lg'>
-          <img class="post-img-url rounded-lg object-cover" width='350px' height='180px' src="https://cdn.jsdelivr.net/gh/hostmind/host/static/tools-website.png" alt="image">
+          <img class="post-img-url rounded-lg object-cover fill" width='350px' height='180px' src="unix.png" alt="image">
           <div>
             <p style="font-family: Poppins-Bold" class="font-bold text-xl text-transparent bg-clip-text bg-gradient-to-r from-cyan-200 via-blue-300 to-blue-600">UNIX Shell+</p>
-            <p class='text-justify my-3'>Web Tools is a comprehensive website that offers a variety of useful tools such as a PNG to WebP converter, word counter, password generator, and video downloaders. The website was created using HTML, Tailwind CSS, and JavaScript, and has a modern and user-friendly design.</p>
+            <p class='text-justify my-3'>A client-server application that includes load balancing, designed to distribute client connections efficiently across the main server and two mirror servers. Includes dynamic threshold mechanism, which activates when the main server's load exceeds 70%. When that happens, client connections are automatically redirected to the mirror servers, minimizing server downtime and optimizing resource use.</p>
             <ul class='mb-3'>
-              <li>&#9989; Wide range of tools.</li>
-              <li>&#9989; Responsive Design</li>
-              <li>&#9989; Dark Mode Supported</li>
+              <li>&#9989; Enhanced UNIX shell with piping, redirection, and conditional execution.</li>
+              <li>&#9989; Improved command handling for advanced functionality and user experience.</li>
+              <li>&#9989; Implemented Load Balancing of the server</li>
             </ul>
             <span class='text-lg font-bold'>Technologies used</span><br>
             <div class='flex space-x-2 my-3'>
@@ -679,6 +680,11 @@ nav {
     padding-top: 100px; /* Adjust based on navbar height */
 
 }
+/* (B) RESIZE METHOD */
+.fill { object-fit: fill; }
+.contain { object-fit: contain; }
+.cover { object-fit: cover; }
+.scale { object-fit: scale-down; }
 </style>
 
 <script>
