nourish nation project update

--- a/index.html
+++ b/index.html
@@ -322,11 +322,11 @@
           <img class="post-img-url rounded-lg object-cover" width='350px' height='180px' src="https://cdn.jsdelivr.net/gh/hostmind/host/static/movies-web-ui.png" alt="image">
           <div>
             <p style="font-family: Poppins-Bold" class="font-bold text-xl text-transparent bg-clip-text bg-gradient-to-r from-cyan-200 via-blue-300 to-blue-600">Nourish Nation</p>
-            <p class='text-justify my-3'>Movies Web UI is a movie website UI design project that was created using HTML, Tailwind CSS, and JavaScript. It features a clean and modern design with easy navigation, making it a great user experience.</p>
+            <p class='text-justify my-3'>The project addresses climate change’s impact on agriculture by integrating Hadoop’s HDFS with machine learning to forecast pre-harvest crop production. Used real-time weather data to optimize crop selection, promoting sustainable farming. The model provides accurate predictions of nutrient-rich crops and easy-to-understand monthly reports, helping farmers contribute to global food security. This innovative approach aligns with the UN's 2030 goal to eradicate hunger, showcasing the potential of advanced technology in sustainable agriculture.</p>
             <ul class='mb-3'>
-              <li>&#9989; Modern UI</li>
-              <li>&#9989; Responsive Design</li>
-              <li>&#9989; Easy Navigation</li>
+              <li>&#9989; Graphical representation of the recommendations</li>
+              <li>&#9989; Hadoop HDFS for scalable storage, fault-tolerant processing</li>
+              <li>&#9989; Crop advice and weather forecasts powered by machine learning</li>
             </ul>
             <span class='text-lg font-bold'>Technologies used</span><br>
             <div class='flex space-x-2 my-3'>
