emailjs issue fix

--- a/index.html
+++ b/index.html
@@ -383,7 +383,7 @@
                     message: message
                 };
             
-                emailjs.send('service_cjrxq3n', 'template_gt5b89b', templateParams)
+                emailjs.send('service_cjrxq3n', 'template_6fkp679', templateParams)
                     .then(function(response) {
                        console.log('SUCCESS!', response.status, response.text);
                        alert('Email sent successfully!');
