--- a/index.html
+++ b/index.html
@@ -387,6 +387,7 @@
                     .then(function(response) {
                        console.log('SUCCESS!', response.status, response.text);
                        alert('Email sent successfully!');
+					   document.getElementById('contact-form').reset();
                     }, function(error) {
                        console.log('FAILED...', error);
                        alert('Failed to send email. Please try again later.');
