resolved mobile view navbar issues

--- a/index.html
+++ b/index.html
@@ -26,6 +26,9 @@
 
       <nav class="nav bg-gray-900 text-white flex justify-between items-center p-3 px-8 md:px-20">
          <a href="#" class="text-lg font-mono" onclick="reloadAndGoTop()">Nishanthan Ravichandran</a>
+		  <div class='flex space-x-4 text-xl'>
+            <i class="nav-btn bi bi-list cursor-pointer md:hidden"></i>
+         </div>
          
          <div class="bg-gray-900 hidden items-center md:block">
             <a href="#index-section" class="p-2 px-3 my-1 text-white rounded-[8px] hover:bg-gray-800">Home</a>
