--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
       <div id="article-section" class=' bg-gray-800 text-white p-5 md:py-8 md:px-20 lg:px-40 xl:px-60'>
          <p style="font-family: Poppins-Bold" class='text-4xl font-extrabold py-5 text-center md:text-start'>Articles</p>
          <div style="box-shadow:0 5px 30px 0 rgba(0,0,0,.05);" class='flex flex-col md:flex-row gap-4 md:gap-x-8 bg-gray-900 p-5 mb-4 rounded-lg'>
-            <img class="post-img-url rounded-lg object-cover" width='350px' height='180px' src="ws.png" alt="image">
+            <img class="post-img-url rounded-lg object-cover" width='350px' height='180px' src="https://cdn.jsdelivr.net/gh/nishanthan22/nishanth-static/ws.png" alt="image">
             <div>
                <span class='text-xl font-extrabold'>The WebSocket technology: AWS WebSocket API and SockJs Library</span><br>
                <p class='mt-2 mb-4 text-gray-400'>by  <i class="bi bi-person"></i>  <a href='/about' class='group transition-all duration-500 ease-out'>Nishanthan</a> <i class="bi bi-dot"></i> <span><i class="bi bi-calendar4-event"></i> &nbsp;April 26, 2024</span></p>
@@ -229,7 +229,7 @@
             </div>
          </div>
          <div style="box-shadow:0 5px 30px 0 rgba(0,0,0,.05);" class='flex flex-col md:flex-row gap-4 md:gap-x-8 bg-gray-900 p-5 mb-4 rounded-lg'>
-            <img class="post-img-url rounded-lg object-cover" width='350px' height='180px' src="publ.png" alt="image">
+            <img class="post-img-url rounded-lg object-cover" width='350px' height='180px' src="https://cdn.jsdelivr.net/gh/nishanthan22/nishanth-static/publ.png" alt="image">
             <div>
                <span class='text-xl font-extrabold'>An Empirical Study on Architecture and Efficiency of Dalvik VM and Android Runtime (ART)</span><br>
                <p class='mt-2 mb-4 text-gray-400'>by  <i class="bi bi-person"></i>  <a href='/about' class='group transition-all duration-500 ease-out'>Nishanthan</a> <i class="bi bi-dot"></i> <span><i class="bi bi-calendar4-event"></i> &nbsp;August, 2022</span></p>
@@ -242,7 +242,7 @@
             <div id="projects-section" class="project-card">
                <p style="font-family: Poppins-Bold" class='text-4xl font-extrabold py-5 text-center md:text-start'>Projects</p>
                <div style="box-shadow:0 5px 30px 0 rgba(0,0,0,.05);" class='flex flex-col md:flex-row gap-4 md:gap-x-8 bg-gray-900 p-5 mb-4 rounded-lg'>
-                  <img class="post-img-url rounded-lg object-cover fill" width='350px' height='180px' src="brainybits.png" alt="image">
+                  <img class="post-img-url rounded-lg object-cover fill" width='350px' height='180px' src="https://cdn.jsdelivr.net/gh/nishanthan22/nishanth-static/brainybits.png" alt="image">
                   <div>
                      <p style="font-family: Poppins-Bold" class="font-bold text-xl text-transparent bg-clip-text bg-gradient-to-r from-cyan-200 via-blue-300 to-blue-600">Brainy Bits AI
                      <p>
@@ -270,7 +270,7 @@
                   </div>
                </div>
                <div style="box-shadow:0 5px 30px 0 rgba(0,0,0,.05);" class='flex flex-col md:flex-row gap-4 md:gap-x-8 bg-gray-900 p-5 mb-4 rounded-lg'>
-                  <img class="post-img-url rounded-lg object-cover cover" width='350px' height='160px' src="rcube.png" alt="image">
+                  <img class="post-img-url rounded-lg object-cover cover" width='350px' height='160px' src="https://cdn.jsdelivr.net/gh/nishanthan22/nishanth-static/rcube.png" alt="image">
                   <div>
                      <p style="font-family: Poppins-Bold" class="font-bold text-xl text-transparent bg-clip-text bg-gradient-to-r from-cyan-200 via-blue-300 to-blue-600">RCube Green Ecom</p>
                      <p class='text-justify my-3'>This project is developed using Django, a high-level Python web framework. The primary aim is to create a platform that helps consumers make eco-friendly choices by providing access to green products and sustainability education using blogs that is related to the green technology.</p>
@@ -296,7 +296,7 @@
                   </div>
                </div>
                <div style="box-shadow:0 5px 30px 0 rgba(0,0,0,.05);" class='flex flex-col md:flex-row gap-4 md:gap-x-8 bg-gray-900 p-5 mb-4 rounded-lg'>
-                  <img class="post-img-url rounded-lg object-cover fill" width='350px' height='180px' src="unix.png" alt="image">
+                  <img class="post-img-url rounded-lg object-cover fill" width='350px' height='180px' src="https://cdn.jsdelivr.net/gh/nishanthan22/nishanth-static/unix.png" alt="image">
                   <div>
                      <p style="font-family: Poppins-Bold" class="font-bold text-xl text-transparent bg-clip-text bg-gradient-to-r from-cyan-200 via-blue-300 to-blue-600">UNIX Shell+</p>
                      <p class='text-justify my-3'>A client-server application that includes load balancing, designed to distribute client connections efficiently across the main server and two mirror servers. Includes dynamic threshold mechanism, which activates when the main server's load exceeds 70%. When that happens, client connections are automatically redirected to the mirror servers, minimizing server downtime and optimizing resource use.</p>
@@ -320,7 +320,7 @@
                   </div>
                </div>
                <div style="box-shadow:0 5px 30px 0 rgba(0,0,0,.05);" class='flex flex-col md:flex-row gap-4 md:gap-x-8 bg-gray-900 p-5 mb-4 rounded-lg'>
-                  <img class="post-img-url rounded-lg object-cover fill" width='350px' height='180px' src="nourish_nation.png" alt="image">
+                  <img class="post-img-url rounded-lg object-cover fill" width='350px' height='180px' src="https://cdn.jsdelivr.net/gh/nishanthan22/nishanth-static/nourish_nation.png" alt="image">
                   <div>
                      <p style="font-family: Poppins-Bold" class="font-bold text-xl text-transparent bg-clip-text bg-gradient-to-r from-cyan-200 via-blue-300 to-blue-600">Nourish Nation</p>
                      <p class='text-justify my-3'>The project addresses climate change’s impact on agriculture by integrating Hadoop’s HDFS with machine learning to forecast pre-harvest crop production. Used real-time weather data to optimize crop selection, promoting sustainable farming. The model provides accurate predictions of nutrient-rich crops and easy-to-understand monthly reports, helping farmers contribute to global food security. This innovative approach aligns with the UN's 2030 goal to eradicate hunger, showcasing the potential of advanced technology in sustainable agriculture.</p>
