added github icon in the home section

--- a/index.html
+++ b/index.html
@@ -68,6 +68,12 @@
                      <button class='relative bg-gray-800 px-7 py-2 text-white rounded-md group-hover:text-gray-50 transition duration-200'><i class="bi bi-person"></i> About me</button>
                   </div>
                </a>
+			   <a target="_blank" href='https://github.com/nishanthan22/'>
+                  <div class='relative group'>
+                     <div class='bg-gradient-to-r from-cyan-300 to-blue-600 px-6 py-2 text-white rounded-md -inset-0.5 absolute blur-sm opacity-75 group-hover:-inset-1 transition group-hover:duration-400 group-hover:opacity-90 duration-1000'></div>
+                     <button class='relative bg-gray-800 px-7 py-2 text-white rounded-md group-hover:text-gray-50 transition duration-200'><i class="bi bi-github"></i> View my GitHub</button>
+                  </div>
+               </a>
             </ul>
          </div>
       </div>
